...

        }
    }
    
   private func showAlertWithMessage(_ message : String)
    {
        let alertView = UIAlertController(title: "Message", message: message, preferredStyle: .alert)
        let okAction = UIAlertAction(title: "Ok", style: .default) { (action) in
            
        }
        
        alertView.addAction(okAction)
        self.present(alertView, animated: true) {
            
...
