...
                            <constraint firstItem="ZNa-5t-Vsb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Sza-fG-6vV"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ZNa-5t-Vsb" secondAttribute="bottom" id="WbT-Az-a2x"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZNa-5t-Vsb" secondAttribute="trailing" id="Z4V-8D-MVJ"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="NY Times Most Popular" id="eoG-VD-zLh">
                        <barButtonItem key="leftBarButtonItem" image="menu" id="nOB-I2-PLU">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="menuButtonAction:" destination="BYZ-38-t0r" id="NVw-iZ-tew"/>
                            </connections>
                        </barButtonItem>
                        <rightBarButtonItems>
                            <barButtonItem title="Item" image="menu-vertical-filled" id="JFQ-sM-XU3">
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <connections>
                                    <action selector="moreMenuButtonAction:" destination="BYZ-38-t0r" id="Qff-6i-e8t"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem systemItem="search" id="ZJE-kb-yPt">
...
